[package]
name = "sun"
version = "0.2.0"
authors = ["Markus Kohlhase <mail@markus-kohlhase.de>"]
license = "MIT"
homepage = "https://github.com/flosse/rust-sun"
repository = "https://github.com/flosse/rust-sun"
description = "Calculate the position of the sun."
readme = "README.md"
keywords = ["sun", "position"]
edition = "2018"

[badges]
appveyor = { repository = "flosse/rust-sun", branch = "master" }
